Prevent scrollbar from causing layout shift (#114)

--- a/apps/onboarding/src/styles/global.css
+++ b/apps/onboarding/src/styles/global.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: FavoritStd, 'Helvetica Neue', sans-serif;
+  background-color: #fafafa;
 }
 
 html {
